# OMNI_ultrasound

./: .buildinfo  .gitattributes  .gitignore  design_decisions.md  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pytest.ini  quickstart.html  readme.txt  readme_development.md  requirements.txt  search.html  searchindex.js  set_up_sphinx.md  setup.cfg
.github/workflows/: ghpages.yml  testing.yml
Old_Code/: align_wip.py  multiteds_wip.py  segm_wip.py  side_detector wip.py
Tests/: path_literals.py  test_alignment.py  test_brainextraction.py  test_kelluwen.py  test_readio.py  test_sidedetector.py  test_subcortical_segmentation.py  test_tedsmulti.py  test_test.py
Tests/testdata/: example_image.mha
_modules/: index.html
_modules/fetalbrain/: utils.html
_sources/: index.rst.txt  quickstart.rst.txt
_sources/fetalbrain/: index.rst.txt
doc_scripts/: align_demo.py  quickstart.py  quickstart_multiple.py  subc_demo.py
docs/source/: conf.py  index.rst  modules.rst  quickstart.rst  src.alignment.rst  src.rst  src.structural_segmentation.rst
fetalbrain/: index.html  utils.html
fetalbrain/alignment/: align.html  fBAN_v1.html  index.html  kelluwen_transforms.html
fetalbrain/structural_segmentation/: index.html  segmentation_model.html  subcortical_segm.html
fetalbrain/tedsnet_multi/: hemisphere_detector.html  index.html  teds_multi_segm.html
src/: utils.py
src/alignment/: align.py  align_wip.py  fBAN_v1.py  kelluwen_transforms.py  utils_alignment.py
src/fetalbrain/: download_modelweights.py  downloader.py  model_paths.py  quickstart.py  (+1 more)
(+57 files in other folders)
