[metadata]
name = fetalbrain
version = 0.0.1
author = Linde Hesse
author_email = lindehesse@gmail.com
description = Package for fetal ultrasound analysis methods developed in OMNI


[options]
package_dir=
    =src
install_requires = 
    nibabel
    numpy
    SimpleITK
    torch>=1.8.0
    typeguard
    scipy
python_requires = >=3.8, <3.12

[options.packages.find]
where=src

[options.extras_require]
all = 
    %(dev)s
    %(plot)s
    %(doc)s
    %(readmat)s
dev =
    black
    coverage
    flake8
    mypy
    pytest
    pytest-cov
plot =
    matplotlib
doc =
    furo
    sphinx
    sphinxext-opengraph
    sphinx-autobuild
    sphinx-gallery
